Add handler to save an email in a group or lists in Mailup
